Creating log4j2.properties file

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
-/* ??????????????? ?????????? ??????? ??? ?? ???????? ??? ??????, ??? ??? ???? ?? ?? ??????, ??? ? ???????????? ? ??????, ????? ?? ???????? credentials, ???? ?? ?? ???????? ????????, ????? ?? ????? ???????????, ???? ? ?????????? (???? ? ?????????? ??? database ??????), ??? ?? ???????? ?????? ???? ?????????????? ????????? ???????? (DDL).
-*/
+# ??????????????? ?????????? ??????? ??? ?? ???????? ??? ??????, ??? ??? ???? ?? ?? ??????, ??? ? ???????????? ? ??????, ????? ?? ???????? credentials, ???? ?? ?? ???????? ????????, ????? ?? ????? ???????????, ???? ? ?????????? (???? ? ?????????? ??? database ??????), ??? ?? ???????? ?????? ???? ?????????????? ????????? ???????? (DDL).
+
 hibernate.connection.username=root
 hibernate.connection.password=23452345ani
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
